# ChangeLog for net-misc/rsync
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/rsync/ChangeLog,v 1.188 2009/05/11 16:41:54 vapier Exp $

*rsync-3.0.6 (11 May 2009)

  11 May 2009; Mike Frysinger <vapier@gentoo.org> +rsync-3.0.6.ebuild:
  Version bump #269375 by Lars Wendler.

  17 Mar 2009; Raúl Porcel <armin76@gentoo.org> rsync-3.0.5.ebuild:
  m68k stable wrt #258367, thanks to kolla for testing

  12 Feb 2009; Brent Baude <ranger@gentoo.org> rsync-3.0.5.ebuild:
  stable ppc64, bug 258367

  12 Feb 2009; nixnut <nixnut@gentoo.org> rsync-3.0.5.ebuild:
  ppc stable #258367

  12 Feb 2009; Jeremy Olexa <darkside@gentoo.org> rsync-3.0.5.ebuild:
  amd64 stable, bug 258367

  12 Feb 2009; Jeroen Roovers <jer@gentoo.org> rsync-3.0.5.ebuild:
  Stable for HPPA (bug #258367).

  11 Feb 2009; Raúl Porcel <armin76@gentoo.org> rsync-3.0.5.ebuild:
  arm/ia64/s390/sh/sparc/x86 stable wrt #258367

  09 Feb 2009; Tobias Klausmann <klausman@gentoo.org> rsync-3.0.5.ebuild:
  Stable on alpha, bug #258367

  08 Jan 2009; Mike Frysinger <vapier@gentoo.org> rsync-3.0.5.ebuild:
  Drop code to move rsyncd.conf around since everyone is converted now
  #201223 by Paul Hewlett. Also tweak chroot check so it only warns when
  people have bad config files.

  08 Jan 2009; Mike Frysinger <vapier@gentoo.org> rsync-3.0.4.ebuild,
  rsync-3.0.5.ebuild:
  Have SRC_URI look in a slightly diff path where all upstream versions are
  kept #254060 by Maryasin Semen.

*rsync-3.0.5 (29 Dec 2008)

  29 Dec 2008; Mike Frysinger <vapier@gentoo.org> +rsync-3.0.5.ebuild:
  Version bump.

  27 Nov 2008; Jeroen Roovers <jer@gentoo.org> rsync-3.0.4.ebuild:
  Stable for HPPA (bug #248439).

  25 Nov 2008; Brent Baude <ranger@gentoo.org> rsync-3.0.4.ebuild:
  stable ppc64, bug 248439

  24 Nov 2008; Raúl Porcel <armin76@gentoo.org> rsync-3.0.4.ebuild:
  alpha/arm/ia64/sparc stable wrt #248439
