@@ -6,7 +6,7 @@ AUX rsyncd.logrotate 105 RMD160 427a1f17db691ba9d54b28893d3635597e6c94ff SHA1 a9
 AUX rsyncd.xinetd 170 RMD160 2ce2addea3cfff08f86a168b0d2d83446514a60f SHA1 a2c04b2f3615a474c72f92362337baa366910b20 SHA256 e19e99dc3daa12d5729dd972b637ed064a2b004a1c7fe75c9f2ebb5ab5997aa8
 DIST rsync-3.0.5.tar.gz 776613 RMD160 c2a223c7afc29be413b593deaa2187f5d000f7a6 SHA1 d95e75af9456b0edca68bde17260c98261b4b8c5 SHA256 40ac20af81d4bc19ed82381371d731f7fb5a26fe4c1e4d4461b1255db63743cb
 DIST rsync-3.0.6.tar.gz 778927 RMD160 881ecea519b97d1a7f326b021ebac939ac2fe091 SHA1 8853dfd291b3850aafa60169d2eea8601498f713 SHA256 33cc969364cb66b3e345fa7db2c651a8e07de0e58743ec03899c4ba86953e1b3
-EBUILD rsync-3.0.5.ebuild 2628 RMD160 4b9e1cbdac9758e13c2b38a0c72ff7f827b276ef SHA1 4b86d815919bf183141a16e004a63366cb65e64c SHA256 a2a984477cc63a44ba7c96db5d942cb48207e8564be8d8ffeb9c9ba0afec282a
-EBUILD rsync-3.0.6.ebuild 2626 RMD160 7ed68b6bc9667cfbe62f51e025156622a8acdeac SHA1 13fc78174836bb9f3c36d58edc79b71621febd8a SHA256 ddda3074f8ab47d2db68371a18b652e4f5a52e929491a2345314ad8567934092
-MISC ChangeLog 24010 RMD160 5e74d2c20ce7313ec3e8639f045333b6ff469f57 SHA1 f25044e1f04025b2dd4b42c590b084eee80d4b47 SHA256 bcbea0d1c7f6bccf9d208c09628053100265c2270e662e2991532e90de1e4200
+EBUILD rsync-3.0.5.ebuild 2611 RMD160 bd8c3a93792d2bc403f842d9fd0edd994a8c950d SHA1 d581029ce1ea40835e13e71a602e01049d676287 SHA256 7dc38871210ffe30b5c17f88354fc524f45bb96c27dbeac5a8d3b0b3d7f70cf0
+EBUILD rsync-3.0.6.ebuild 2610 RMD160 c962a5fcc1e60e33d5e1b0e19900649181853649 SHA1 0d8a0800dc632b36cfcc42cdc622c9847494c571 SHA256 8a30e7174821e51cd11bca006ba2010084d08f7e7c5718700fa960e08849ec5f
+MISC ChangeLog 24186 RMD160 f907f77e8e35a863738f15b2b8f83d789759fcb5 SHA1 d2b0bc6802b9cf8cb1e9e0332e9fa1a4549d15ab SHA256 cdf40f8d804d40830074ba4cb0944a8954107de2ce2f1dd46f7a84a5ef565df1
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
