@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/rsync
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/rsync/ChangeLog,v 1.188 2009/05/11 16:41:54 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/rsync/ChangeLog,v 1.189 2009/05/29 19:59:09 flameeyes Exp $
+
+  29 May 2009; Diego E. Pettenò <flameeyes@gentoo.org> rsync-3.0.5.ebuild,
+  rsync-3.0.6.ebuild:
+  Replace kernel-conditional dependency on sys-apps/acl with virtual/acl.
 
 *rsync-3.0.6 (11 May 2009)
 
